# topohedral-integrate

./: Cargo.toml  README.md  activate.zsh  rustfmt.toml
.github/workflows/: ci.yaml  docs.yml
assets/: adaptive-integrals-2d.py  adaptive-integrals.py  adaptive-integrals_1d.py  gauss-quad.json  gauss-quad.py  poly-integrals-1d.json  poly-integrals-2d.json  poly-integrals.json  poly-integrals.py
assets/quadrature-data/: Le11.txt  Le2.txt  Le26.txt  Le3.txt  Le37.txt  Le4.txt  Le5.txt  Le6.txt  Lo11.txt  Lo2.txt  Lo26.txt  Lo3.txt  Lo37.txt  Lo4.txt  Lo5.txt  Lo6.txt
docs/website/: mkdocs.yml
docs/website/docs/: getting-started.md  index.md
src/: adaptive.rs  common.rs  fixed.rs  gauss.rs  lib.rs
src/adaptive/: d1.rs  d2.rs  mod.rs
src/fixed/: d1.rs  d2.rs  mod.rs
tests/: adaptive.rs  fixed.rs  gauss.rs
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.2/api/: crates.js  help.html  index.html  settings.html  src-files.js
v0.0.2/api/search.index/: 003fab0ee6.js  025dc7f985.js  02ca0aaaa4.js  218b31b551.js  2b4306ace3.js  33e2643f52.js  793d409a58.js  7984dd8c47.js  root.js
v0.0.2/api/topohedral_integrate/: all.html  enum.GaussQuadType.html  enum.OptionsError.html  fn.adaptive_quad_1d.html  fn.adaptive_quad_2d.html  fn.fixed_quad_1d.html  fn.fixed_quad_2d.html  fn.get_legendre_points.html  fn.get_lobatto_points.html  index.html  sidebar-items.js  struct.AdaptiveQuadOpts1D.html  struct.AdaptiveQuadOpts2D.html  struct.AdaptiveQuadResult1D.html  struct.AdaptiveQuadResult2D.html  struct.FixedQuad1D.html  struct.FixedQuad2D.html  struct.FixedQuadOpts1D.html  struct.FixedQuadOpts2D.html  struct.GaussQuad.html  struct.GuassQuadSet.html
v0.0.2/developers/: index.html
v0.0.2/developers/building-docs/: index.html
v0.0.2/getting-started/: index.html
v0.0.2/search/: search_index.json
v0.0.2/user-guide/: index.html
v0.0.2/user-guide/adaptive-quadrature/: index.html
v0.0.2/user-guide/fixed-quadrature/: index.html
(+58 files in other folders)
