[package]
name = "topohedral-integrate"
version = "0.0.1"
authors = ["John Ferguson <JAFerguson952@gmail.com>"]
edition = "2021"
repository = "https://github.com/TopoHedralLabs/topohedral-integrate"
readme = "README.md"
license = "MIT"
description = "A crate for numerical integration."
publish = ["cloudsmith"]

[features]
enable_trace = ["topohedral-tracing/enable_trace"]

[dependencies]
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
approx = "0.5.1"
log = "0.4.29"
thiserror = "2.0.17"
topohedral-tracing = {version = "0.0.2", registry = "cloudsmith"}
topohedral-linalg = {version = "1.0.1", registry = "cloudsmith"}


[dev-dependencies]
ctor = "0.6.3"
